@@ -11,10 +11,17 @@
 # Maximum number of attempts to stablish the matterhorn user password
 MAX_PASSWD_ATTEMPTS=3
 
+# Install Matterhorn with the following profile (all, capture, admin, work, engage)
+export MATTERHORN_PROFILE="all";
+# Use a shared workspace or workspace stub
+export WORKSPACE_VERSION="workspace-stub"
+
 # Default name for the matterhorn user 
 export USERNAME=matterhorn
 # Storage directory for the matterhorn-related files
 export OC_DIR=/opt/matterhorn
+# Storage directory for the matterhorn generated content
+export CONTENT_DIR=/opt/matterhorn/content
 # Name for the directory where the matterhorn-related files will be stored
 export CA_DIR=$OC_DIR/capture-agent
 # Directory where the source code will be downloaded to
@@ -37,7 +44,7 @@ export BRANCHES_URL=$SVN_URL/branches
 export TAGS_URL=$SVN_URL/tags
 
 # Default URL from where scripts and java source will be dowloaded
-export SRC_DEFAULT=$BRANCHES_URL/1.2.x
+export SRC_DEFAULT=$BRANCHES_URL/1.3.x
 
 # File containing the rules to be applied by udev to the configured devices -- not a pun!
 export DEV_RULES=/etc/udev/rules.d/matterhorn.rules
@@ -67,10 +74,15 @@ export TRACKING_URL=http://www.opencastproject.org/form/tracking
 
 # Third-party dependencies variables
 # Packages that are installed by default (one per line --please note the quotation mark at the end!!!)
-# These may be changed by the $SETUP_DEPENDENCIES script depending on the version of Ubuntu. 
-export PKG_LIST="acpid
-alsa-utils
+export PKG_LIST="alsa-utils
+v4l-conf
+ivtv-utils
 curl
+maven2
+sun-java6-jdk
+subversion
+wget
+openssh-server
 gcc
 gstreamer0.10-alsa
 gstreamer0.10-plugins-base
@@ -78,25 +90,14 @@ gstreamer0.10-plugins-good
 gstreamer0.10-plugins-ugly
 gstreamer0.10-plugins-ugly-multiverse
 gstreamer0.10-ffmpeg
-ivtv-utils
-libglib2.0-dev
-maven2
 ntp
-openssh-server
-subversion
-sun-java6-jdk
-v4l-conf
-wget"
+acpid"
 
-# Versions of Ubuntu that we have package lists for. The above defaults will be used
-export UBUNTU_10_10="Ubuntu 10.10 \n \l"
-export UBUNTU_10_10_PACKAGES_FILE="Ubuntu-10-10.packages"
-export UBUNTU_11_04="Ubuntu 11.04 \n \l"
-export UBUNTU_11_04_PACKAGES_FILE="Ubuntu-11-04.packages"
-export UBUNTU_11_10="Ubuntu 11.10 \n \l"
-export UBUNTU_11_10_PACKAGES_FILE="Ubuntu-11-10.packages"
-export PACKAGE_LIST_DEFAULT_FILE="default.packages"
+# yum packages for CentOS
+export CENTOS_PKG_LIST="ant ant-nodeps ntp curl openssh-server subversion gcc"
 
+# yum Package to install the JDK under CentOS
+export JAVA_CENTOS="java-1.6.0-devel"
 
 # Packages that require the user approval to be installed (Please note the quotation mark at the end!!!)
 # There should be one package per line, but several packages may be included if they need to be treated 'as a block'
@@ -123,13 +124,25 @@ export DEFAULT_QUEUE_SIZE=512
 export EPIPHAN_URL=http://www.epiphan.com/downloads/linux
 
 # Name of the file containing the felix files
-export FELIX_FILENAME=org.apache.felix.main.distribution-2.0.4.tar.gz
+export FELIX_FILENAME=org.apache.felix.main.distribution-3.2.2.tar.gz
 # URL where the previous file can be fetched
 export FELIX_URL=http://archive.apache.org/dist/felix/$FELIX_FILENAME
 # Subdir under the user home where FELIX_HOME is
 export FELIX_HOME=$OC_DIR/felix
+# Name of the file containing the maven 3 files
+export MAVEN_FILENAME="apache-maven-3.0.3-bin.tar.gz"
+# URL where the previous file can be fetched
+export MAVEN_URL="http://www.apache.org/dist//maven/binaries/$MAVEN_FILENAME"
+# Subdir under the user home where FELIX_HOME is
+export MAVEN_HOME=/usr/local/bin/maven
+# Memory settings for maven to build matterhorn
+export MAVEN_OPTS='-Xms256m -Xmx960m -XX:PermSize=64m -XX:MaxPermSize=256m'
 # Path under FELIX_HOME where the general matterhorn configuration
 export GEN_PROPS=$FELIX_HOME/conf/config.properties
+# Path under FELIX_HOME where the default multi-tenancy configuration is located
+export TENANCY_DEFAULT_PROPS=$FELIX_HOME/load/org.opencastproject.organization-mh_default_org.cfg
+# Path under FELIX_HOME where the demo multi-tenancy configuration is located
+export TENANCY_PROPS=$FELIX_HOME/load/org.opencastproject.organization-tenant1.cfg
 # Path under FELIX_HOME where the capture agent properties are
 export CAPTURE_PROPS=$FELIX_HOME/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
 # Directory UNDER FELIX HOME where the felix filex will be deployed
@@ -139,8 +152,8 @@ export DEPLOY_DIR=matterhorn
 export JAVA_PREFIX=/usr/lib/jvm
 # A regexp to filter the right jvm directory from among all the installed ones
 # The chosen JAVA_HOME will be $JAVA_PREFIX/`ls $JAVA_PREFIX | grep $JAVA_PATTERN`
-export JAVA_PATTERNS="java-6-sun java-7-oracle"
-                           
+export JAVA_PATTERN=java-6-sun                                           
+                                                                         
 # Path to the maven2 repository, under the user home
 export M2_SUFFIX=.m2/repository
 
@@ -188,6 +201,10 @@ Testers should choose a value of 1 minute so that they can schedule recordings t
 export STORAGE_KEY="org.opencastproject.storage.dir"
 # CA's own url in the general felix config file (config.properties)
 export SERVER_URL_KEY="org.opencastproject.server.url"
+# The admin server URL in the felix config file (config.properties)
+export ADMIN_SERVER_KEY="org.opencastproject.admin.ui.url"
+# The engage server URL in the felix config file (config.properties)
+export ENGAGE_SERVER_KEY="org.opencastproject.engage.ui.url"
 # Port where felix is running in the felix config file (config.properties)
 export FELIX_PORT_KEY="org.osgi.service.http.port"
 # URL for the machine hosting the service registry, in the felix config file (config.properties)
@@ -196,6 +213,38 @@ export SERVICE_REG_KEY="org.opencastproject.serviceregistry.url"
 export AGENT_NAME_KEY="capture.agent.name"
 # URL of the core machine inthe capture properties file
 export CORE_URL_KEY="org.opencastproject.capture.core.url"
+# Database driver settings in the felix config file (config.properties)
+export DATABASE_DRIVER_KEY="org.opencastproject.db.jdbc.driver"
+# Database driver settings in the felix config file (config.properties)
+export DATABASE_VENDOR_KEY="org.opencastproject.db.vendor"
+# Database driver settings in the felix config file (config.properties)
+export DATABASE_AUTOGEN_KEY="org.opencastproject.db.ddl.generation"
+# Database driver settings in the felix config file (config.properties)
+export DATABASE_URL_KEY="org.opencastproject.db.jdbc.url"
+# Database driver settings in the felix config file (config.properties)
+export DATABASE_USER_KEY="org.opencastproject.db.jdbc.user"
+# Database driver settings in the felix config file (config.properties)
+export DATABASE_PASSWORD_KEY="org.opencastproject.db.jdbc.pass"
+# Streaming server URL settings in the felix config file (config.properties)
+export STREAMING_URL_KEY="org.opencastproject.streaming.url"
+# Streaming server URL settings in the felix config file (config.properties)
+export STREAMING_DIRECTORY_KEY="org.opencastproject.streaming.directory"
+# Streaming server URL settings in the felix config file (config.properties)
+export DOWNLOAD_URL_KEY="org.opencastproject.download.url"
+# Streaming server URL settings in the felix config file (config.properties)
+export DOWNLOAD_DIRECTORY_KEY="org.opencastproject.download.directory"
+# Mediainspect path settings in the felix config file (config.properties)
+export MEDIA_INSPECTION_KEY="org.opencastproject.inspection.mediainfo.path"
+# Tesseract path settings in the felix config file (config.properties)
+export TEXTEXTRACTION_KEY="org.opencastproject.textanalyzer.tesseract.path"
+# FFMPEG path settings in the felix config file (config.properties)
+export FFMPEG_KEY="org.opencastproject.composer.ffmpegpath"
+# OCROPUS path settings in the felix config file (config.properties)
+export OCROPUS_KEY="org.opencastproject.textanalyzer.ocrocmd"
+# QT embedder path settings in the felix config file (config.properties)
+export QTEMBEDDER_KEY="org.opencastproject.composer.qtembedderpath"
+# Streaming server URL settings in the felix config file (config.properties)
+export DOWNLOAD_DIRECTORY_KEY="org.opencastproject.download.directory"
 # Time between two subsequent updates of the capture schedule in the capture properties file
 export SCHEDULE_POLL_KEY="capture.schedule.remote.polling.interval"
 # Prefix for properties related to a certain device in the capture properties file
@@ -214,6 +263,10 @@ export TYPE_SUFFIX="type"
 export QUEUE_SUFFIX="buffer.bytes"
 # Suffix for the comma-separated list of all the devices attached to a capture agent in the capture properties file
 export LIST_SUFFIX="names"
+# Configuration key for the server URL/IP in an multi-tenancy file
+export TENANT_SERVER_KEY="server"
+# Configuration key for the server URL/IP in an multi-tenancy file
+export TENANT_PORT_KEY="port"
 
 # One of the possible values for the ".type" suffix, indicating an Epiphan device, in the capture properties file
 export EPIPHAN_TYPE="EPIPHAN_VGA2USB"
@@ -222,8 +275,9 @@ export EPIPHAN_TYPE="EPIPHAN_VGA2USB"
 SETUP_USER=./setup_user.sh
 INSTALL_VGA2USB=./install_vga2usb_drivers.sh
 SETUP_DEVICES=./setup_devices.sh
-SETUP_DEPENDENCIES=./setup_dependencies.sh
-INSTALL_DEPENDENCIES=./install_dependencies.sh
+INSTALL_DEPENDENCIES=./install_dependencies_common.sh
+INSTALL_DEPENDENCIES_UBUNTU=./install_dependencies_ubuntu.sh
+INSTALL_DEPENDENCIES_CENTOS=./install_dependencies_centos.sh
 SETUP_SOURCE=./setup_source.sh
 SETUP_ENVIRONMENT=./setup_environment.sh
 SETUP_BOOT=./setup_boot.sh
@@ -232,41 +286,20 @@ export FUNCTIONS=./functions.sh
 # This one is exported because it has to be modified by another script
 export CLEANUP=./cleanup.sh
 
-SCRIPTS=( "$SETUP_USER" "$INSTALL_VGA2USB" "$SETUP_DEVICES" "$SETUP_DEPENDENCIES" "$INSTALL_DEPENDENCIES"\
-          "$SETUP_ENVIRONMENT" "$SETUP_SOURCE" "$SETUP_BOOT" "$CLEANUP" "$FUNCTIONS")
-SCRIPTS_EXT=docs/scripts/ubuntu_capture_agent
+SCRIPTS=( "$SETUP_USER" "$INSTALL_VGA2USB" "$SETUP_DEVICES" "$INSTALL_DEPENDENCIES" "$SETUP_ENVIRONMENT"\
+          "$SETUP_SOURCE" "$SETUP_BOOT" "$CLEANUP" "$FUNCTIONS" "$INSTALL_DEPENDENCIES_UBUNTU" "$INSTALL_DEPENDENCIES_CENTOS" )
+SCRIPTS_EXT=docs/scripts/installer
 
 # The subsidiary scripts will check for this variable to check they are being run from here
 export INSTALL_RUN=true
 
 # End of variables section########################################################################################
 
-
-
-# Checks if this script is being run with root privileges, exiting if it doesn't
-if [[ `id -u` -ne 0 ]]; then
-    echo "This script requires root privileges. Please run it with the sudo command or log in to the root user and try again"
-    exit 1
-fi
-
 # Change the working directory to a temp directory under /tmp
 # Deletes its contents, in case it existed previously (MH-3797)
 mkdir -p $WORKING_DIR
 rm -f $WORKING_DIR/*
 cd $WORKING_DIR
-
-# Log the technical outputs                                                                                                                                 
-echo "# Output of uname -a" > $LOG_FILE
-uname -a >> $LOG_FILE
-echo >> $LOG_FILE
-echo "# Total memory" >> $LOG_FILE
-echo $(cat /proc/meminfo | grep -m 1 . | cut -d ':' -f 2) >> $LOG_FILE
-echo >> $LOG_FILE
-echo "# Processor(s) model name" >> $LOG_FILE
-model_name="$(cat /proc/cpuinfo | grep -m 1 'model name' | cut -d ':' -f 2)"
-physical="$(cat /proc/cpuinfo | grep -m 1 'cores' | cut -d ':' -f 2)"
-virtual="$(cat /proc/cpuinfo | grep -m 1 'siblings' | cut -d ':' -f 2)"
-echo "$model_name ($physical physical core(s), $virtual virtual cores)" >> $LOG_FILE
 
 # If wget isn't installed, get it from the ubuntu software repo
 wget foo &> /dev/null
@@ -285,7 +318,7 @@ for (( i = 0; i < ${#SCRIPTS[@]}; i++ )); do
 	# Check if the script is in the directory where the install.sh script was launched
 	if [[ -e $START_PATH/$f ]]; then
 	    # ... and copies it to the working directory
-	    cp $START_PATH/$f $WORKING_DIR
+	    cp $START_PATH/$f $WORKING_DIR/
 	else
 	    # The script is not in the initial directory, so try to download it from the opencast source page
 	    wget $SRC_DEFAULT/$SCRIPTS_EXT/$f &> /dev/null	    
@@ -304,13 +337,77 @@ done
 # Choose/create the matterhorn user (WARNING: The initial perdiod (.) MUST be there so that the script can export several variables)
 . ${SETUP_USER}
 
+# Checks if this script is being run with root privileges, exiting if it doesn't
+if [[ `id -u` -ne 0 ]]; then
+    echo "This script requires root privileges. Please run it with the sudo command or log in to the root user and try again"
+    exit 1
+fi
+
+# Log the technical outputs                                                                                                                                 
+echo "# Output of uname -a" > $LOG_FILE
+uname -a >> $LOG_FILE
+echo >> $LOG_FILE
+echo "# Total memory" >> $LOG_FILE
+echo $(cat /proc/meminfo | grep -m 1 . | cut -d ':' -f 2) >> $LOG_FILE
+echo >> $LOG_FILE
+echo "# Processor(s) model name" >> $LOG_FILE
+model_name="$(cat /proc/cpuinfo | grep -m 1 'model name' | cut -d ':' -f 2)"
+physical="$(cat /proc/cpuinfo | grep -m 1 'cores' | cut -d ':' -f 2)"
+virtual="$(cat /proc/cpuinfo | grep -m 1 'siblings' | cut -d ':' -f 2)"
+echo "$model_name ($physical physical core(s), $virtual virtual cores)" >> $LOG_FILE
+
+# Log the distribution
+echo "# Output of cat /etc/*-release" >> $LOG_FILE
+cat /etc/*-release >> $LOG_FILE
+
+# set the Distribution 
+
+if [ "`cat /etc/*-release | grep -e Ubuntu -e Debian`" ] 
+  then 
+    export LINUX_DIST="Ubuntu"
+else 
+  if [ "`cat /etc/*-release | grep -e CentOS -e 'Red Hat Enterprise'`" ]
+    then 
+      export LINUX_DIST="Centos"
+  else 
+    echo "Unsupported Linux Distribution. Please install Matterhorn manually."
+    exit 1
+  fi
+fi
+
+choose -t "What kind of Matterhorn server do you want to install?" -? "Matterhorn can be build with different profiles." -o list -- "All-in-One installation" "Admin modules" "Worker modules" "Engage/Player modules" "Capture Agent modules" profile
+case "$profile" in
+        0) MATTERHORN_PROFILE="all"
+        ;;
+        1) MATTERHORN_PROFILE="admin"
+        ;;
+        2) MATTERHORN_PROFILE="work"
+        ;;
+        3) MATTERHORN_PROFILE="engage"
+        ;;
+        4) MATTERHORN_PROFILE="capture"
+        ;;
+esac
+
+if ([ "$MATTERHORN_PROFILE" == "admin" ] || [ "$MATTERHORN_PROFILE" == "work" ] || [ "$MATTERHORN_PROFILE" == "engage" ]); then
+        yesno -d no "Do you want to use a shared workspace between your Matterhorn servers?" workspace
+        if [ $workspace ]; then
+                WORKSPACE_VERSION="workspace"
+	else 
+	  WORKSPACE_VERSION="workspace-stub"
+        fi
+fi
+
 # Create the directory where all the capture-agent-related files will be stored
 mkdir -p $CA_DIR
 
-# Setup dependencies for individual versions of Ubuntu. 
-. ${SETUP_DEPENDENCIES}
-
 # Install the 3rd party dependencies (WARNING: The initial perdiod (.) MUST be there so that the script can export several variables)
+if [ "$LINUX_DIST" == "Centos" ]; then
+  . ${INSTALL_DEPENDENCIES_CENTOS}
+fi 
+if [ "$LINUX_DIST" == "Ubuntu" ]; then
+  . ${INSTALL_DEPENDENCIES_UBUNTU}
+fi 
 . ${INSTALL_DEPENDENCIES}
 if [[ "$?" -ne 0 ]]; then
     echo "Error installing the 3rd party dependencies."
@@ -318,10 +415,12 @@ if [[ "$?" -ne 0 ]]; then
 fi
 
 # Install the vga2usb driver
-${INSTALL_VGA2USB}
-if [[ "$?" -ne 0 ]]; then
-    echo "Error installing the vga2usb driver."
-    exit 1
+if [ "$LINUX_DIST" == "Ubuntu" ] && [ $MATTERHORN_PROFILE == "capture" ]; then
+  ${INSTALL_VGA2USB}
+  if [[ "$?" -ne 0 ]]; then
+      echo "Error installing the vga2usb driver."
+      exit 1
+  fi
 fi
 
 unset source_ok
@@ -329,33 +428,52 @@ while [[ ! "$source_ok" ]] ; do
     # Set up the matterhorn code --doesn't build yet!
     ${SETUP_SOURCE}
     if [[ "$?" -ne 0 ]]; then
-	echo "Error setting up the matterhorn code. Contact matterhorn@opencastproject.org for assistance."
+	echo "Error setting up the matterhorn code. Contact matterhorn-users@opencastproject.org for assistance."
 	exit 1
     fi
     source_ok=true
-    
-    # Setup properties of the devices
-    ${SETUP_DEVICES}
-    if [[ "$?" -ne 0 ]]; then
-	echo "Error setting up the capture devices. Contact matterhorn@opencastproject.org for assistance."
-	exit 1
+
+
+    if [ "$LINUX_DIST" == "Ubuntu" ] && [ "$MATTERHORN_PROFILE" == "capture" ]; then    
+      # Setup properties of the devices
+      ${SETUP_DEVICES}
+      if [[ "$?" -ne 0 ]]; then
+	  echo "Error setting up the capture devices. Contact matterhorn-users@opencastproject.org for assistance."
+	  exit 1
+      fi
     fi
     
     # Set up user environment
     ${SETUP_ENVIRONMENT}
     if [[ "$?" -ne 0 ]]; then
-	echo "Error setting up the environment for $USERNAME. Contact matterhorn@opencastproject.org for assistance."
+	echo "Error setting up the environment for $USERNAME. Contact matterhorn-users@opencastproject.org for assistance."
 	exit 1
     fi
-    
+	
+    if [ "$MATTERHORN_PROFILE" != "capture" ]; then
+      yesno -d no "Do you want to build the third party tools after matterhorn has been build? This can take up to an hour depending on your computer and your internet-connection" build_3rdparty
+    fi
+
     # Build matterhorn
-    echo -e "\n\nProceeding to build the capture agent source. This may take a long time. Press any key to continue...\n\n"
+    echo -e "\n\nProceeding to build the matterhorn source. This may take a long time. Press any key to continue...\n\n"
     read -n 1 -s
     
     unset build_ok
     while [[ ! "$build_ok" ]]; do
 	cd $SOURCE
-	su $USERNAME -c "mvn clean install -Pcapture,serviceregistry-stub -DdeployTo=${HOME}/${OC_DIR##*/}/${FELIX_HOME##*/}/${DEPLOY_DIR}"
+	if [ "$MATTERHORN_PROFILE" == "capture" ]; then
+	  PROFILE="-Pcapture,serviceregistry-stub"
+	fi 
+	if [ "$MATTERHORN_PROFILE" == "work" ]; then
+	  PROFILE="-Pworker,ingest,$WORKSPACE_VERSION"
+	fi
+	if [ "$MATTERHORN_PROFILE" == "admin" ]; then
+	  PROFILE="-Padmin,dist-stub,engage-stub,worker-stub,workspace"
+	fi
+	if [ "$MATTERHORN_PROFILE" == "engage" ]; then
+	  PROFILE="-Pengage,dist,$WORKSPACE_VERSION"
+	fi
+	su $USERNAME -c "mvn clean install $PROFILE -DdeployTo=${HOME}/${OC_DIR##*/}/${FELIX_HOME##*/}/${DEPLOY_DIR}"
 	if [[ "$?" -ne 0 ]]; then
 	    echo
 	    choose -t "Error building the matterhorn code. What do you wish to do?" "Download another source" "Retry build" "Exit" src_opt
@@ -366,11 +484,11 @@ while [[ ! "$source_ok" ]] ; do
 		    # This is to exit this loop only. Doesn't mean the code is correctly build.
 		    build_ok=true
 		    ;;
-	        #1)
-	        #    Does nothing. The inner loop repeats (building the source only)
-                #    ;;
+		#1)
+		#    Does nothing. The inner loop repeats (building the source only)
+		#    ;;
 		2) 
-		    echo -e "\nError building the matterhorn code. Contact matterhorn@opencastproject.org for assistance."
+		    echo -e "\nError building the matterhorn code. Contact matterhorn-users@opencastproject.org for assistance."
 		    exit 3
 		    ;;
 	    esac
@@ -385,12 +503,20 @@ done
 # Set up the file to run matterhorn automatically on startup
 ${SETUP_BOOT}
 
+if [ $build_3rdparty ]; then 
+  cd $SOURCE/docs/scripts/3rd_party/
+  ./do-all
+  if [[ "$?" -ne 0 ]]; then
+  	echo "Installing the 3rd-party tools failed. Please run $SOURCE/docs/scripts/3rd_party/do-all. I f you still encounter problems Contact matterhorn-users@opencastproject.org for assistance.\nThe rest of Matterhorn system installed without further problems."
+  fi
+fi
+
 # Log the contents of /etc/issue
 echo >> $LOG_FILE
 echo "# Contents in /etc/issue" >> $LOG_FILE
 cat /etc/issue >> $LOG_FILE
 
-echo -e "\n\n\nCapture Agent succesfully installed\n\n\n"
+echo -e "\n\n\nMatterhorn succesfully installed\n\n\n"
 
 # Prompt the user to send 
 #yesno -d yes -? "This feedback includes information about the hardware you have installed Matterhorn on, and the configuration options you have used."\
@@ -415,7 +541,7 @@ if [[ "$reboot" ]]; then
     echo "Rebooting... "
     reboot > /dev/null
 else
-    echo -e "\n\nThe capture agent will start automatically after rebooting the system."
+    echo -e "\n\nThe system will start automatically after rebooting the system."
     echo "However, you can start it manually by running ${FELIX_HOME}/bin/start_matterhorn.sh"
     echo "Please direct your questions / suggestions / etc. to the list: matterhorn@opencastproject.org"
     echo
